--- a/templates/exercise_message_review_finished.html
+++ b/templates/exercise_message_review_finished.html
@@ -2,21 +2,21 @@
   <h2 class="pulls">Review Completed!</h2>
 
   <span id="congrats-message">
-    <span>Congrats, you've wrapped up your review!</span>
-    <span>Congrats, you've mastered what you've learned!</span>
-    <span>Nice job, you've proven your skills!</span>
-    <span>Well done, you know your stuff.</span>
-    <span>You're not afraid of any pop quizzes now! :)</span>
+    <span>Gefeliciteerd, je hebt de herziening afgerond!</span>
+    <span>Gefeliciteerd, je hebt wat je hebt geleerd onder de knie!</span>
+    <span>Goed gedaan, je hebt je vaardigheden bewezen!</span>
+    <span>Prima, je weet genoeg.</span>
+    <span>Beetje bang voor toetsen?! :)</span>
   </span>
 
   <span id="move-on-message">
     <span>
-      <a href="/exercisedashboard" class="simple-button green">Choose a new skill</a>
-      to expand your knowledge frontier!
+      <a href="/exercisedashboard" class="simple-button green">Kies een nieuwe vaardigheid</a>
+      om je kennis-grens te verleggen!
     </span>
     <span>
-      <a href="/exercisedashboard" class="simple-button green">You may now proceed</a>
-      in your quest to know everything!
+      <a href="/exercisedashboard" class="simple-button green">Je mag nu door gaan</a>
+      met je jacht naar ultieme kennis!
     </span>
   </span>
 </div>
