--- a/javascript/exercises-package/end-of-stack-card.handlebars
+++ b/javascript/exercises-package/end-of-stack-card.handlebars
@@ -11,7 +11,7 @@
             	<img src="/images/power-mode/card-leaf-full-large.png" /><span class="times">&times;</span>{{totalLeaves}}
             </p>
         </div>
-        <h2>Stack Progress</h2>
+        <h2>Stapel Voortgang</h2>
     </div>
     <div class="progress-graph current-stack visited-no-recolor">
 	    {{#each progress}}
