--- a/templates/coach_resources/toolkit_content/classroom-culture.html
+++ b/templates/coach_resources/toolkit_content/classroom-culture.html
@@ -37,7 +37,7 @@ nodig.</p>
 {% block col2content %}	
 <div class="callout">
 
-		<h3>Useful links</h3>
+		<h3>Handige links</h3>
 		<ul class="bullet">
 			<li><a href="http://prezi.com/savnabakcjjt/copy-of-blended-learning-presentation-to-students/">Example presentation that invests students in blended learning from Summit San Jose</a></li>
 			<li><a href="http://dl.dropbox.com/u/34796456/Khan%20Academy%20Contract.pdf">Example class contract from Los Altos</a></li>
