--- a/templates/coach_resources/toolkit_content/different-learners.html
+++ b/templates/coach_resources/toolkit_content/different-learners.html
@@ -35,7 +35,7 @@
 		
 {% block col2content %}	
 <div class="callout">
-		<h3>Useful links</h3>
+		<h3>Handige links</h3>
 		<ul class="bullet">
 			<li><a href="http://dl.dropbox.com/u/38043945/Stuck%20on%20Khan%20checklist.docx">Example "Stuck on Khan" student guide from Summit San Jose</a></li>
 			<li><a href="http://khanacademy.desk.com/customer/portal/articles/414211-do-you-have-results-that-show-the-success-of-khan-academy-in-the-classrooms-">Do you have results that show the success of KA in classrooms?</a></li>
