--- a/templates/coach_resources/toolkit_content/first-week.html
+++ b/templates/coach_resources/toolkit_content/first-week.html
@@ -29,7 +29,7 @@ altijd contact met ons opnemen.</p>
 		
 {% block col2content %}	
 <div class="callout">
-		<h3>Useful links</h3>
+		<h3>Handige links</h3>
 		<ul class="bullet">
 			<li><a href="http://dl.dropbox.com/u/34796456/ka-first-week.pdf">Handout: Sample first week schedule using Khan Academy</a></li>
 			<li><a href="http://dl.dropbox.com/u/34796456/ka-first-month.pdf">Handout: Sample first month schedule using Khan Academy</a></li>
