--- a/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
+++ b/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
@@ -32,7 +32,7 @@
 		
 {% block col2content %}	
 <div class="callout">
-	<h3>Useful links</h3>
+	<h3>Handige links</h3>
 	<ul class="bullet">
 		<li><a href="http://khanacademy.desk.com/customer/portal/articles/414175-what-is-the-vision-of-khan-academy-in-the-classroom-">Wat is de visie van Khan Academie in de klas?</a></li>
 		
