--- a/templates/coach_resources/toolkit_content/individualized-units.html
+++ b/templates/coach_resources/toolkit_content/individualized-units.html
@@ -36,7 +36,7 @@
 		
 {% block col2content %}	
 <div class="callout">
-		<h3>Useful links</h3>
+		<h3>Handige links</h3>
 		<ul class="bullet">
 			<li><a href="http://dl.dropbox.com/u/34796456/Integrating%20Khan%20Academy%20%26%20Curriculum%20Worksheets%20for%20Toolkit.v7.pptx">Download worksheets</a></li>
 			<li><a href="http://khanacademy.desk.com/customer/portal/articles/414175-what-is-the-vision-of-khan-academy-in-the-classroom-">What is the vision for KA in the classroom?</a></li>
