--- a/templates/coach_resources/toolkit_content/instructional-strategies.html
+++ b/templates/coach_resources/toolkit_content/instructional-strategies.html
@@ -49,7 +49,7 @@ behaald.</p>
 		
 {% block col2content %}	
 <div class="callout">
-		<h3>Useful links</h3>
+		<h3>Handige links</h3>
 		<ul class="bullet">
 			<li><a href="http://dl.dropbox.com/u/38043945/Active%20Listening%20Khan%20Academy.docx">Example lesson on active listening from East Side Palo Alto</a></li>
 			<li><a href="http://dl.dropbox.com/u/38043945/OaklandUnityViewingGuide.docx">Example handout on active listening from Oakland Unity</a></li>
