--- a/templates/coach_resources/toolkit_content/keys-to-success.html
+++ b/templates/coach_resources/toolkit_content/keys-to-success.html
@@ -48,7 +48,7 @@ prijzenkast waardoor ze anderen kunnen motiveren ook beter hun best te doen.
 		
 {% block col2content %}	
 <div class="callout">
-		<h3>Useful links</h3>
+		<h3>Handige links</h3>
 		<ul class="bullet">
 			<li><a href="http://dl.dropbox.com/u/34796456/Active%20Listening%20Khan%20Academy.docx">Lesson on active listening from Eastside Prep</a></li>
 			<li><a href="http://dl.dropbox.com/u/38043945/OaklandUnityViewingGuide.docx">Handout on active listening from Oakland Unity</a></li>
