--- a/templates/coach_resources/toolkit_content/projects.html
+++ b/templates/coach_resources/toolkit_content/projects.html
@@ -28,7 +28,7 @@
 		
 {% block col2content %}	
 <div class="callout">
-		<h3>Useful links</h3>
+		<h3>Handige links</h3>
 		<ul class="bullet">
 			<li><a href="http://dl.dropbox.com/u/34796456/Active%20Listening%20Khan%20Academy.docx">Project Template</a></li>
 		
