--- a/templates/coach_resources/toolkit_content/teacher-faqs.html
+++ b/templates/coach_resources/toolkit_content/teacher-faqs.html
@@ -11,7 +11,7 @@
 		
 {% block col2content %}	
 <div class="callout">
-		<h3>Useful links</h3>
+		<h3>Handige links</h3>
 		<ul class="bullet">
 			<li><a href="#">What type of computers should I get for my classroom?</a></li>
 			<li><a href="#">How fast does my internet connection need to be to run Khan Academy?</a></li>
