--- a/templates/coach_resources/toolkit_content/technology.html
+++ b/templates/coach_resources/toolkit_content/technology.html
@@ -30,7 +30,7 @@
 		
 {% block col2content %}	
 <div class="callout">
-		<h3>Useful links</h3>
+		<h3>Handige links</h3>
 		<ul class="bullet">
 			<li><a href="http://khanacademy.desk.com/customer/portal/articles/414115-what-types-of-computers-devices-should-i-be-using-in-the-classroom-">What type of computers should I have in my classroom?</a></li>
 			<li><a href="http://khanacademy.desk.com/customer/portal/articles/414132-which-browsers-are-supported-">Which browsers are supported?</a></li>
