--- a/javascript/studentlists-package/class-progress-report.handlebars
+++ b/javascript/studentlists-package/class-progress-report.handlebars
@@ -1,6 +1,6 @@
 <table id="module-progress" cellspacing="0" cellpadding="0" border="0">
     <tr>
-        <th id="firstTd" class="tableHeader">Student Progress</th>
+        <th id="firstTd" class="tableHeader">Vooruitgang leerling</th>
         <td>
             <div id="divHeader" class="sizeOnResize" style="overflow:hidden;width:450px; line-height: 15px;">
                 <table cellspacing="0" cellpadding="0" border="1" style="width: 100%">
