--- a/javascript/studentlists-package/class-progress-report.handlebars
+++ b/javascript/studentlists-package/class-progress-report.handlebars
@@ -29,7 +29,7 @@
                 {{/each}}
                 <tr class="student-email-row" data-id="-1" style="display: none">
                     <td class="tableFirstCol student-email hidden-students" style="vertical-align: none;">
-                      Hidden students
+                      Verborgen leerlingen
                     </td>
                 </tr>
                 <td class="tableFirstCol student-email" style="background: transparent; border-color: transparent; max-width:5px; min-width: 5px; width: 5px">&nbsp;</td>
@@ -51,7 +51,7 @@
                             <em><nobr>Status: {{ status }}</nobr></em><br/>
                             <em>Progress: {{ progress }}%</em><br/>
                             {{#if last_done_ago}}<em>Last worked on: {{ last_done_ago }}</em></br/>{{/if}}
-                            <em>Problems attempted: {{ total_done }}</em>
+                            <em>poging tot probleem: {{ total_done }}</em>
                           </div>
                           {{/if}}
                         </td>
