--- a/javascript/studentlists-package/class-progress-report.handlebars
+++ b/javascript/studentlists-package/class-progress-report.handlebars
@@ -49,9 +49,9 @@
                             <b>{{ ../../nickname }}</b><br/>
                             <b>{{ exercise_display }}</b><br/>
                             <em><nobr>Status: {{ status }}</nobr></em><br/>
-                            <em>Progress: {{ progress }}%</em><br/>
-                            {{#if last_done_ago}}<em>Last worked on: {{ last_done_ago }}</em></br/>{{/if}}
-                            <em>poging tot probleem: {{ total_done }}</em>
+                            <em>Vooruitgang: {{ progress }}%</em><br/>
+                            {{#if last_done_ago}}<em>Als laatste gewerkt aan: {{ last_done_ago }}</em></br/>{{/if}}
+                            <em>poging gedaan: {{ total_done }}</em>
                           </div>
                           {{/if}}
                         </td>
