--- a/javascript/studentlists-package/class-progress-report.handlebars
+++ b/javascript/studentlists-package/class-progress-report.handlebars
@@ -50,8 +50,8 @@
                             <b>{{ exercise_display }}</b><br/>
                             <em><nobr>Status: {{ status }}</nobr></em><br/>
                             <em>Vooruitgang: {{ progress }}%</em><br/>
-                            {{#if last_done_ago}}<em>Als laatste gewerkt aan: {{ last_done_ago }}</em></br/>{{/if}}
-                            <em>poging gedaan: {{ total_done }}</em>
+                            {{#if last_done_ago}}<em>Laatst gewerkt: {{ last_done_ago }}</em></br/>{{/if}}
+                            <em>Pogingen: {{ total_done }}</em>
                           </div>
                           {{/if}}
                         </td>
