--- a/javascript/video-package/modal-video.handlebars
+++ b/javascript/video-package/modal-video.handlebars
@@ -34,7 +34,7 @@
             <span style="float:right;" id="points-badge-hover">
                 <div class="video-energy-points" {{#if logged_in}}title="{{points}} Energy Punten verdient voor het bekijken van deze video"{{else}}title="Je verdient punten voor het bekijken van deze video. Log in om deze te behouden"{{/if}} >
                     <span class="video-energy-points-current">{{points}}</span>
-                    of {{possible_points}}
+                    van {{possible_points}}
                 </div>
             </span>
             </nobr>
