--- a/javascript/profile-package/username-picker.handlebars
+++ b/javascript/profile-package/username-picker.handlebars
@@ -27,7 +27,7 @@
             <div class="inputs">
                 <input type="text" value="{{username}}" class="username" id="username"><span class="sidenote"></span>
                 <p class="input-description">
-                    Jouw gebruikersnaam zal verschijnen in jou Khan Academie adres.
+                    Jouw gebruikersnaam zal verschijnen in jouw Khan Academie adres.
                 </p>
                 <p class="input-description">
                     http://www.khanacademie.nl/profile/<span class="example-username">{{gebruikersnaam}}</span>
