--- a/templates/about/gettingstarted.html
+++ b/templates/about/gettingstarted.html
@@ -56,7 +56,7 @@
         <img src="/images/exercise-dashboard-medium.png" height="250" width="320" class="rounded-background">
     </a>
     <p>
-        Iedereen kan de site gratis gebruiken. (test) <br>
+        Iedereen kan de site gratis gebruiken. <br>
         Om je vorderingen op te slaan en badges te verdienen heb je echter een Google- of Facebook account nodig. 
         Klik <a href="/login">hier </a>om in te loggen. 
 		
