--- a/javascript/profile-package/profile.handlebars
+++ b/javascript/profile-package/profile.handlebars
@@ -65,14 +65,14 @@
                     <a href="{{profileRoot}}vital-statistics/skill-progress"
                        class="tab-link has-icon no-recolor ellipsis"
                        rel="vital-statistics skill-progress">
-                        Progressie in vaardigheden
+                        Voortgang in vaardigheden
                     </a>
                 </li>
                 <li>
                     <a href="{{profileRoot}}vital-statistics/skill-progress-over-time"
                        class="tab-link has-icon no-recolor ellipsis"
                        rel="vital-statistics skill-progress-over-time">
-                        Progressie in de afgelopen tijd
+                        Voortgang in de afgelopen tijd
                     </a>
                 </li>
             </ul>
