Activity, Activiteiten -> Activiteit

--- a/javascript/profile-package/profile.handlebars
+++ b/javascript/profile-package/profile.handlebars
@@ -51,7 +51,7 @@
                     <a href="{{profileRoot}}vital-statistics/activity"
                        class="tab-link has-icon no-recolor ellipsis"
                        rel="vital-statistics activity">
-                        Activiteiten
+                        Activiteit
                     </a>
                </li>
                 <li>
