--- a/templates/discussion/video_comments_content.html
+++ b/templates/discussion/video_comments_content.html
@@ -3,7 +3,7 @@
 {% if not comments %}
     <div class="comment">
         <!-- TODO Would be nice to personalize example thanks message -->
-        Bedankt!<br/>
+        Bedankt voor de hulp!<br/>
         <span class="comment_sig sig">{{ discussion.signature() }}</span>
     </div>
 {% endif %}
