--- a/templates/macros/discussion.html
+++ b/templates/macros/discussion.html
@@ -218,7 +218,7 @@
                 {% endif %}
             {% endif %}
         {% else %}
-            &ndash;Example
+            &ndash;Voorbeeld
         {% endif %}
     </nobr>
 {%- endmacro %}
