Leerling, now it's singular.

--- a/templates/macros/coach.html
+++ b/templates/macros/coach.html
@@ -4,7 +4,7 @@
 
     <div id="empty-class">
         {% if class_is_empty %}
-        <h1>Je hebt nog geen leerlingen.</h1>
+        <h1>Je hebt nog geen leerling.</h1>
         {% endif %}
         <h3>Elk van je leerlingen moet de volgende stappen ondernemen:</h3>
         <ol>
