Fixed profile styling issues

--- a/javascript/profile-package/profile.handlebars
+++ b/javascript/profile-package/profile.handlebars
@@ -119,7 +119,7 @@
         {{#if profileData.isActivityAccessible}}
             <div class="empty-graph">
                 <h2><a href="/#browse">Bekijk een video</a> of <a href="/exercisedashboard">probeer een vaardigheid</a>!</h2>
-                <p>Wanneer je bezig gaat, zullen hier je gegevens te zien zijn..</p>
+                <p>Wanneer je begint met oefenen zullen hier je gegevens te zien zijn.</p>
             </div>
             <div class="error-graph">
                 <h2>Het ins onze fout.</h2>
