Geef mij nog een set -> Meer, better styling for result stack

--- a/javascript/exercises-package/end-of-stack-card.handlebars
+++ b/javascript/exercises-package/end-of-stack-card.handlebars
@@ -86,17 +86,17 @@
                 {{/if}}
             </h2>
             <div class="stack-controls practice-mode proficient">
-                <input type="button" class="more-stacks simple-button left" value="Geef mij nog een set van deze oefeningen"><input type="button" class="skill-proficient to-dashboard default-action simple-button green right" value="Kies een nieuwe vaardigheid om aan te werken" style="margin:0">
+                <input type="button" class="more-stacks simple-button left" value="Meer van deze oefeningen"><input type="button" class="skill-proficient to-dashboard default-action simple-button green right" value="Kies een nieuwe vaardigheid om aan te werken" style="margin:0">
             </div>
         {{else}}
             <div class="stack-controls practice-mode">
-                <input type="button" class="take-a-break to-dashboard simple-button left" value="Werk aan iets anders"><input type="button" class="more-stacks default-action simple-button green right" value="Geef mij nog een set van deze oefeningen!">
+                <input type="button" class="take-a-break to-dashboard simple-button left" value="Werk aan iets anders"><input type="button" class="more-stacks default-action simple-button green right" value="Meer van deze oefeningen!">
             </div>
         {{/if}}
         {{/each}}
     {{else}}
         <div class="stack-controls">
-            <input type="button" class="take-a-break to-dashboard simple-button left" value="Werk aan iets anders"><input type="button" class="more-stacks default-action simple-button green right" value="Geef mij nog een set van deze oefeningen!">
+            <input type="button" class="take-a-break to-dashboard simple-button left" value="Werk aan iets anders"><input type="button" class="more-stacks default-action simple-button green right" value="Meer van deze oefeningen!">
         </div>
     {{/if}}
 </div>
