Improved page template and translated some site metadata

--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -82,6 +82,10 @@ body {
     margin: 0 auto;
 }
 
+div#content {
+    background: #fff;
+}
+
 article {
     padding: 0 19px;
     background: #fff;
