Maak een nieuwe lijst -> Maak nieuwe lijst

--- a/templates/viewstudentlists.html
+++ b/templates/viewstudentlists.html
@@ -90,7 +90,7 @@
     <a id="newlist-ok" class="simple-button" href="#">OK</a>
     <a id="newlist-cancel" class="simple-button" href="#">Annuleer</a>
     </div>
-    <a id="newlist-button" class="simple-button" href="#">Maak een nieuwe lijst</a>
+    <a id="newlist-button" class="simple-button" href="#">Maak nieuwe lijst</a>
 </div>
 
 <div id="students-container">
