Mogelijke badges -> alle badges

--- a/javascript/profile-package/badge-container.handlebars
+++ b/javascript/profile-package/badge-container.handlebars
@@ -15,7 +15,7 @@
       </div>
       {{/if}}
       <div id="all-badges">
-        <h2 style="display: block; margin-left: 10px;">Mogelijke badges</h2>
+        <h2 style="display: block; margin-left: 10px;">Alle badges</h2>
         {{#each badges}}
           {{#unless isRetired}}
             {{> shared_badge}}
