translation of the search of the matching videos

--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -105,7 +105,7 @@
         {% if topic.match_count > 0 %}
             <dt><h2 class="topic">{{ topic.standalone_title|escape }}
             <span class="match_count">
-                ({{ topic.match_count }} matching video{{ topic.match_count|pluralize }})
+                ({{ topic.match_count }} video's gevonden)
             </span>
             </h2></dt>
 
