Minor styling adjustments

--- a/templates/contribute.html
+++ b/templates/contribute.html
@@ -60,6 +60,7 @@
                         Maar alles moet wel worden vertaald van het Engels naar het Nederlands. Dit kost tijd en hier
                         kunnen
                         we jouw hulp goed bij gebruiken! </p>
+
                     <p>
                         Op www.crowdin.net kun je ons helpen met vertalen. Hiervoor moet je de volgende stappen
                         doorlopen:
@@ -159,7 +160,7 @@
             <div class="clear"></div>
             <hr>
             <div class="col1 sixty-forty">
-                <h2>Verspreid het nieuws!</h2>
+                <h2>Verspreid het woord!</h2>
 
                 <p>
                     Door anderen te vertellen over de Khan Academie help je ons ook.
@@ -190,8 +191,13 @@
             </div>
             <div class="clear"></div>
             <hr>
-            <div style="text-align:center; padding-bottom: 18px;"><p>De Nederlandse Khan Academie zou niet bestaan
-                zonder de hulp, tijd, energie en expertise van de vele vrijwilligers.</p></div>
+            <div style="text-align:center; padding-bottom: 18px;">
+                <p>
+                    De Nederlandse Khan Academie zou niet bestaan
+                    zonder de hulp, tijd, energie en expertise van de vele vrijwilligers.
+                </p>
+            </div>
+        </div>
     </article>
 {% endblock pagecontent %}
 {% block bottompagescript %}
