--- a/stylesheets/homepage-package/homepage.css
+++ b/stylesheets/homepage-package/homepage.css
@@ -83,12 +83,8 @@ a.begin-button:visited {
 }
 
 #homepage-text {
-    overflow: auto;
-    margin-left: 6%;
-    background: #F3F3F3;;
-    -moz-box-shadow: 1px 1px 2px 0px #E2E2E2;
-    -webkit-box-shadow: 1px 1px 2px 0px #E2E2E2;
-    box-shadow: 1px 1px 2px 0px #E2E2E2;
+    overflow: visible;
+    margin-left: 5%;
     height: 100%;
 }
 
@@ -220,6 +216,17 @@ td.social-action.gplus {
 }
 
 /* Responsive stuff */
+
+@media (max-width: 1000px) {
+    #homepage-text-container {
+        width: 50%;
+    }
+
+    #homepage-video {
+        width: 50%;
+    }
+}
+
 @media (max-width: 767px) {
     /* Kinda small margins for kinda small displays */
     #homepage-left-col {
@@ -248,6 +255,10 @@ td.social-action.gplus {
         margin-left: 0;
         margin-right: 0;
         padding-bottom: 1.5em;
+        background: #F3F3F3;;
+        -moz-box-shadow: 1px 1px 2px 0px #E2E2E2;
+        -webkit-box-shadow: 1px 1px 2px 0px #E2E2E2;
+        box-shadow: 1px 1px 2px 0px #E2E2E2;
     }
 }
 
