--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -481,6 +481,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 #navbar {
     min-height: 84px; /*navbar height*/
     width: 100%;
+    margin: 8px 0 8px 0;
     display: inline-block;
     text-align: right;
 }
