--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -62,7 +62,7 @@
     {% endif %}
     <form id="page_requery" action="/search">
         <input id="search-page-box" type="text" name="page_search_query" value='{{page_search_query|escape}}'>
-        <button type="submit">New Search</button>
+        <button type="submit">Zoeken</button>
     </form>
     {% if topics and matching_topic_count %}
     <section class="topics search-topics">
