--- a/templates/macros/coach.html
+++ b/templates/macros/coach.html
@@ -13,7 +13,7 @@
                 <img src="/images/profile-link-in-header.png?1" class="vertical-shadow rounded-background" />
             </li>
             <li>
-                <p>Vervolgens moeten ze op het Coaches icoon klikken.</p>
+                <p>Vervolgens moeten ze op het coaches icoon klikken.</p>
                 <img src="/images/coaches-nav.png?1" class="vertical-shadow rounded-background"/>
             </li>
             <li class="enter-email">
