--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -287,7 +287,8 @@
                             </ul>
                             <div id="search-box">
                                 <form class="page-search" action="/search">
-                                    <input id="search-input" type="text" placeholder="Zoek op videos en oefeningen"
+                                    <input id="search-input"
+				    type="text" placeholder="Zoek op video's en oefeningen"
                                            name="page_search_query" value='{{ page_search_query|escape }}'
                                            class="ui-corner-all placeholder simple-input search-input blur-on-esc"/>
                                     <input
