Search terms must contain at least 4 characters translated.

--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -49,7 +49,7 @@
 {% block pagemessage %}
     {% if query_too_short %}
     <div class="error">
-        Search terms must contain at least {{query_too_short}} letters.
+        Een zoekterm moet uit minstens {{query_too_short}} letters bestaan.
     </div>
     {% endif %}
 {% endblock pagemessage %}
