--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -92,10 +92,10 @@
     {% endif %}
 
     <section class="searchresult-counts">
-        {% if (video_count == 0 and topic_count == 0) %}
+        {% if (_count == 0 and topic_count == 0) %}
 	    Geen video's gevonden. Probeer andere zoektermen.	
         {% else %}
-            Found {{ video_count }} video{{ video_count|pluralize }} in {{ topic_count }} topic{{ topic_count|pluralize }} that match{% if video_count == 1 %}es{% endif %} your query:
+            Vind {{ video_count }} video{{ video_count|pluralize }} in {{ topic_count }} topic{{ topic_count|pluralize }} that match{% if video_count == 1 %}es{% endif %} your query:
         {% endif %}
     </section>
     {% if topics %}
