--- a/templates/viewbadges.html
+++ b/templates/viewbadges.html
@@ -44,7 +44,7 @@
 {%- endif %}
 
 <div class="achievement-badges-explanation">
-    <h3 class="fancy-heading"><span>Badge Types</span></h3>
+    <h3 class="fancy-heading"><span>Successen</span></h3>
     <table style="width:100%" cellspacing="5">
         <tr>
             <td style="text-align:center;">
